# hackasat-final-2021

./: .gitignore  README.md
adcs-linux/: .gitignore  (+11 more)
flatsat/42/: .dockerignore  .gitignore  42.i  42.json  CMakeLists.txt  Dockerfile  Makefile  Makefile.old  README.md  has2_env.sh  run_has2.sh  sim_runner.py
flatsat/42/Database/: 42.json  42_BACKUP_194100.json  42_BASE_194100.json  42_LOCAL_194100.json  42_REMOTE_194100.json  AC.json  HeaderToJson.py  HeadersToJson.py  JsonToIPC.py  JsonToIPCWithNullChecks.py
flatsat/42/HAS2/: Inp_Cmd.txt  Inp_FOV.txt  Inp_Graphics.txt  Inp_IPC.txt  Inp_IPC_Multi.txt  Inp_Region.txt  Inp_Sim.txt  Inp_Sim_Multi.txt  Inp_TDRS.txt  Orb_TEAM_1.txt  Orb_TEAM_2.txt  Orb_TEAM_3.txt  Orb_TEAM_4.txt  Orb_TEAM_5.txt  Orb_TEAM_6.txt  Orb_TEAM_7.txt  Orb_TEAM_8.txt  SC_HAS2.txt
flatsat/42/Include/: 42defines.h  42types.h  AcTypes.h  fswtypes.h
flatsat/42/Kit/: CMakeLists.txt
flatsat/42/Kit/Include/: iokit.h
flatsat/42/Kit/Source/: iokit.c
flatsat/42/Model/: EyasSatMockup-rot.mtl  EyasSatMockup.mtl  VeronneGEOCOMM-BodyOnly-1.mtl  VeronneGEOCOMMFlatSatOnlyWithPlates1.mtl
flatsat/42/Potato/: SC_Potato3.txt
flatsat/42/Screenshots/: CamFrame00001.ppm  CamFrame00002.ppm  CamFrame00003.ppm
flatsat/42/Source/: 42GlutGui.c  42actuators.c  42exec.c  42fsw.c  42init.c  42ipc.c  42main.c  42perturb.c  42sensors.c
flatsat/42/Source/IPC/: AppReadFromCmd.c  AppReadFromFile.c  AppReadFromMqtt.c  AppReadFromSocket.c  AppWriteToFile.c  AppWriteToMqtt.c  AppWriteToSocket.c  CMakeLists.txt  SimReadFromCmd.c  SimReadFromFile.c  SimReadFromGmsec.c  SimReadFromMqtt.c  SimReadFromMqttBackup.c  SimReadFromSocket.c  SimWriteToFile.c  SimWriteToGmsec.c  SimWriteToMqtt.c  SimWriteToMqttBackup.c  SimWriteToSocket.c
flatsat/42/World/: MercatorToCube  testCloudGlossMX.ppm  testCloudGlossMY.ppm  testCloudGlossMZ.ppm  testCloudGlossPX.ppm  testCloudGlossPY.ppm  testCloudGlossPZ.ppm  testMX.ppm  testMY.ppm  testMZ.ppm  testPX.ppm  testPY.ppm  testPZ.ppm
flatsat/opensatkit/cfs/apps/adcs/: CMakeLists.txt
flatsat/opensatkit/cfs/apps/adcs/fsw/mission_inc/: adcs_mission_cfg.h
flatsat/opensatkit/cfs/apps/adcs/fsw/platform_inc/: adcs_msgids.h  adcs_perfids.h  adcs_platform_cfg.h
flatsat/opensatkit/cfs/apps/adcs/fsw/src/: FlatSatFsw.c  FlatSatFsw.h  adcs_app.c  adcs_app.h  adcs_conf_tbl.c  adcs_conf_tbl.h  adcs_hw.c  adcs_hw.h  adcs_hw_cfg.h  adcs_impl.c  adcs_impl.h  adcs_logger.h  app_cfg.h  fss.c  fss.h  imu.c  imu.h  imu_with_child.c  mtr.c  mtr.h  rw.c  rw.h  rw_with_child.c  tqueue.c  tqueue.h  xadc.c  xadc.h
flatsat/opensatkit/cfs/apps/adcs_io/: CMakeLists.txt
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/: .gitignore  CMakeLists.txt  Makefile  README.md  arm-linux-gnueabihf_toolchain.cmake
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/adcs-driver-util/: CMakeLists.txt
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/adcs-driver-util/include/: adcs_driver_util.h  adcs_io_logger.h  adcs_logger.h
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/adcs-driver-util/src/: adcs_driver_util.c
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/bno08x-driver/: CMakeLists.txt
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/bno08x-driver/include/: BNO08x_Driver.h
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/bno08x-driver/src/: BNO08x_Driver.c
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/bno08x-driver/test/: CMakeLists.txt  bno08x_cal.c  test_bno08x.c
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/cubewheel-driver/: .gitignore  CMakeLists.txt  README.md
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/cubewheel-driver/include/: Cubewheel.h  Cubewheel_Common.h  Cubewheel_Telecommand.h  Cubewheel_Telemetry.h
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/cubewheel-driver/src/: Cubewheel.c
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/cubewheel-driver/test/: CMakeLists.txt  code.py  test_cubewheel.c
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/gpio-wrapper/: CMakeLists.txt  Makefile
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/gpio-wrapper/include/: gpio_device.h
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/gpio-wrapper/src/: gpio_device.c
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/gpio-wrapper/test/: CMakeLists.txt  test_gpio.c
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/i2c-wrapper/: CMakeLists.txt
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/i2c-wrapper/include/: i2c_device.h
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/i2c-wrapper/src/: i2c_device.c
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/torquerod-driver/: CMakeLists.txt  README.md
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/torquerod-driver/include/: TorqueRod.h
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/torquerod-driver/src/: TorqueRod.c
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/torquerod-driver/test/: CMakeLists.txt  test_torquerod.c
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/xadc-driver/: CMakeLists.txt  README.md
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/xadc-driver/include/: XadcDriver.h
flatsat/opensatkit/cfs/apps/adcs_io/adcs-drivers/xadc-driver/src/: XadcDriver.c
flatsat/opensatkit/cfs/apps/adcs_io/fsw/public_inc/: AcTypeConverter.h  AcTypes.h  adcs_io_lib.h  iokit.h  orbkit.h
flatsat/opensatkit/cfs/apps/adcs_io/fsw/src/: AcTypeConverter.c  AppReadFromSocket.c  AppWriteToSocket.c  adcs_io_lib.c  adcs_io_lib_version.h  iokit.c  mathkit.c  orbkit.c
flatsat/opensatkit/cfs/apps/eps_mgr/: CMakeLists.txt
flatsat/opensatkit/cfs/apps/eps_mgr/fsw/mission_inc/: eps_mgr_mission_cfg.h
flatsat/opensatkit/cfs/apps/eps_mgr/fsw/platform_inc/: eps_mgr_msgids.h  eps_mgr_perfids.h  eps_mgr_platform_cfg.h
flatsat/opensatkit/cfs/apps/eps_mgr/fsw/src/: app_cfg.h  eps_cfg_tbl.c  eps_cfg_tbl.h  eps_impl.c  eps_impl.h  eps_logger.h  eps_mgr_app.c  eps_mgr_app.h
flatsat/opensatkit/cfs/apps/mqtt_c/: CMakeLists.txt
flatsat/opensatkit/cfs/apps/mqtt_c/fsw/src/: app_cfg.h  mq2sb.c  mq2sb.h  mqtt_app.c  mqtt_app.h  mqtt_client.c  mqtt_client.h  mqtt_logger.h  mqtt_msg.h  sb2mq.c  sb2mq.h
(+625 files in other folders)
