cmake_minimum_required(VERSION 2.6.4)
project(CFS_ADCS)

# add_definitions(-D_FLATSAT_HARDWARE_FSW_)
add_definitions(-D_FLATSAT_SIM_FSW_)
add_definitions(-D_ADCS_CHALLENGE_)
add_definitions(-D_FSS_CHALLENGE_=${_FSS_CHALLENGE_})
add_definitions(-DADCS_LOG_LEVEL=3)
include_directories(fsw/src)
include_directories(fsw/mission_inc)
include_directories(fsw/platform_inc)
include_directories(${cfs_lib_MISSION_DIR}/fsw/public_inc)
include_directories(${adcs_io_MISSION_DIR}/fsw/public_inc)
include_directories(${adcs_io_MISSION_DIR}/adcs-drivers/adcs-driver-util/include)
include_directories(${adcs_io_MISSION_DIR}/adcs-drivers/bno08x-driver/include)
include_directories(${adcs_io_MISSION_DIR}/adcs-drivers/bno08x-driver/sh2)
include_directories(${adcs_io_MISSION_DIR}/adcs-drivers/cubewheel-driver/include)
include_directories(${adcs_io_MISSION_DIR}/adcs-drivers/gpio-wrapper/include)
include_directories(${adcs_io_MISSION_DIR}/adcs-drivers/i2c-wrapper/include)
include_directories(${adcs_io_MISSION_DIR}/adcs-drivers/torquerod-driver/include)
include_directories(${adcs_io_MISSION_DIR}/adcs-drivers/uart-st-driver/include)
include_directories(${adcs_io_MISSION_DIR}/adcs-drivers/xadc-driver/include)

include_directories(${osk_42_lib_MISSION_DIR}/fsw/app_inc)
include_directories(${osk_app_fw_MISSION_DIR}/fsw/platform_inc)
include_directories(${osk_app_fw_MISSION_DIR}/fsw/mission_inc)
include_directories(${osk_app_fw_MISSION_DIR}/fsw/app_inc)

aux_source_directory(fsw/src APP_SRC_FILES)
# aux_source_directory(fsw/tables APP_TABLE_FILES)

# Create the app module
add_cfe_app(adcs ${APP_SRC_FILES})
# add_dependencies(adcs adcs-drivers)
target_link_libraries(adcs m)
